<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/EcoTrackerFragment"
        android:icon="@drawable/eco_tracker_nav_ic"
        android:title="@string/ecotracker" />
    <item
        android:id="@+id/EcoGaugeFragment"
        android:icon="@drawable/eco_gauge_nav_ic"
        android:title="@string/ecogauge" />
<!--    <item-->
<!--        android:id="@+id/EcoBalanceFragment"-->
<!--        android:icon="@drawable/eco_balance_nav_ic"-->
<!--        android:title="@string/ecobalance" />-->
    <item
        android:id="@+id/EcoHubEntryFragment"
        android:icon="@drawable/eco_hub_nav_ic"
        android:title="@string/ecohub" />
    <item
        android:id="@+id/EcoAgentFragment"
        android:icon="@drawable/eco_agent_nav_ic"
        android:title="@string/ecoagent" />
</menu>